feat(aacp): 扩展工具列表和调用功能
- 增加多个工具的支持，包括获取当前时间、回声和字符统计功能。
- 优化工具列表的返回结构，确保返回的工具信息完整且易于理解。
- 更新工具调用逻辑，处理不同工具的参数并返回相应结果。